# token-status-list-py

./: .gitignore  Dockerfile  README.md  docker-compose.yml  issuer.py  pyproject.toml  token_status_list.py  verifier.py
src/: issuer.py  verifier.py
src/token_status_list/: __init__.py
tests/: __init__.py  test_alloctor.py  test_bit_array.py  test_issuer_status_list.py  test_token_status_list.py  test_verifier.py  test_verifier_basic.py  test_web_server.py
tests/test_verifier_web_server/: docker-compose.yml
tests/test_verifier_web_server/issuer/: Dockerfile  main.py  nginx.conf
tests/test_web_server/: Dockerfile  docker-compose.yml  index.html  main.py
tests/test_web_server/issuer/: main.py
